tmux with hjkl navigation

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,18 @@ set-option -g prefix C-a
 unbind-key C-a
 bind-key C-a send-prefix
 
+# vim styled switch panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Use alt-vim to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
 # Use Alt-arrow keys to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -20,8 +32,8 @@ set -g mouse-select-pane on
 set -g mouse-select-window on
 
 # Set easier window split keys
-bind-key v split-window -h
-bind-key h split-window -v
+bind-key i split-window -h
+bind-key u split-window -v
 
 #Easy config relouad
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
