tmux -- mousemode simplified for newer version

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,10 +26,12 @@ bind -n S-Left previous-window
 bind -n S-Right new-window
 
 # Mouse mode
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
+
+#set -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
 
 # Set easier window split keys
 bind-key i split-window -h
